--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -5,7 +5,7 @@
 			<div class="row">
 				<div class="nine columns">
 					<div class="answer-profile">
-						<%= link_to image_tag avatar_url(answer.user, 50), :class => "avatar" %> <span class="name"><%= answer.user.username %></span>
+						<%= link_to image_tag avatar_image_medium(answer.user), :class => "avatar" %> <span class="name"><%= answer.user.username %></span>
 					</div>
 				</div>
 				<div class="three columns">
