--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -22,7 +22,7 @@
 		<div class="answers">
 			<% question.answers.each do |answer|%>
 			<span class="user_answer_number">
-				<%= link_to image_tag(avatar_url(answer.user, 20)), user_path(answer.user) %>
+				<%= link_to image_tag(avatar_image_thumb(answer.user)), user_path(answer.user)%>
 				<%= link_to answer.user.username, user_path(answer.user) %>
 			</span>
 			<% end %>
