--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -7,7 +7,7 @@
 		<div class="row">
 		<% @users.each do |user| %>
 		<div class="six columns" id="profile">
-			<%= link_to image_tag(avatar_url(user, 60), :alt => user.username), user_path(user) %>
+			<%= link_to image_tag(avatar_image_medium(user)), user_path(user)%>
 			<span class="name_profile"><%= link_to user.username, user_path(user) %></span>
 			<div class="row">
 				<div class="eight columns" id="dados">
