--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,6 +18,7 @@
 </div>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+<%= devise_error_messages! %>
 
 <div id="devise_form">
 	<div id="accordion">
