--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
 <div class="six columns" id="menu">
 	<ul class="nav-bar">
 		<li><%= link_to "Home", root_path %></li>
-		<li><%= link_to "Quem Somos", about_path %></li>
+		<li><%= link_to "Quem Somos", sobre_path %></li>
 		<li><%= link_to "Blog", nil %></li>
 		<li><%= link_to "Contato", new_contact_path %></li>
 		<% unless user_signed_in? %>
