--- a/app/views/shared/_main_header.html.erb
+++ b/app/views/shared/_main_header.html.erb
@@ -2,8 +2,8 @@
 	<h1>CONSELHOS DE ESPECIALISTAS QUANDO VOCÊ MAIS PRECISA</h1>
 	<div class="row collapse">
 		<div class="ten mobile-three columns">
-			<%= form_tag search_questions_path, :method => :get do %>
-			<%= text_field_tag :search, params[:search] %>
+			<%= form_for current_search, :url => search_questions_path, :html => {:method => :get} do |f| %>
+			<%= f.text_field :title_or_description_contains %>
 		</div>
 		<div class="two mobile-one columns">
 			<%= submit_tag t("form.buttons.search"), :class => "postfix button expand gloss success" %>
