Migração Digital Ocean

--- a/config/recipes/templates/monit/monitrc.erb
+++ b/config/recipes/templates/monit/monitrc.erb
@@ -16,7 +16,7 @@ set eventqueue
 set alert ernane.sena@gmail.com
 
 set httpd port 2812
-    allow admin:"admin123"
+    allow admin:"alik2012"
 
 check system alik_server
   if loadavg(5min) > 2 for 2 cycles then alert
