--- a/config/recipes/templates/maintenance.html.erb
+++ b/config/recipes/templates/maintenance.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Alik</title>
+    <title>Blog</title>
     <style type="text/css">
     html, body {
       background-color: #4B7399;
