Modificação de receitas

--- a/config/recipes/templates/nginx_unicorn.erb
+++ b/config/recipes/templates/nginx_unicorn.erb
@@ -4,7 +4,7 @@ upstream <%= application %>_unicorn {
 
 server {
   listen 80;
-  server_name ernanesena.com.br *.ernanesena.com.br;
+  server_name alik.com.br *.alik.com.br;
   root <%= current_path %>/public;
   
   access_log	<%= shared_path %>/log/nginx_access.log combined;
