--- a/app/assets/stylesheets/application_new.css
+++ b/app/assets/stylesheets/application_new.css
@@ -4,6 +4,6 @@
  *= require appstrap/responsive
  *= require appstrap/flexslider
  *= require appstrap/theme-style.css
- *= require appstrap/colour-blue
+ *= require appstrap/custom-alik
  *= require appstrap/custom-style
 */
