--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -5,26 +5,19 @@
     <div class="header-hidden">
       <div class="header-hidden-inner container">
         <div class="row-fluid">
-          <div class="span4">
-            <h3>About Us</h3>
-            <p>Making the web a prettier place one template at a time! We make beautiful, quality, responsive Drupal & web templates!</p>
-            <a href="about.htm" class="btn btn-mini btn-primary">Find out more</a> </div>
-          <div class="span4"> 
-            <!--@todo: replace with company contact details-->
-            <h3>Contact Us</h3>
-            <address>
-            <p><abbr title="Phone"><i class="icon-phone"></i></abbr> 019223 8092344</p>
-            <p><abbr title="Email"><i class="icon-envelope"></i></abbr> info@themelize.me</p>
-            <p><abbr title="Address"><i class="icon-home"></i></abbr> Sunshine House, Sunville. SUN12 8LU.</p>
-            </address>
+          <div class="span8">
+            <h3><%= t("navigation.about.title") %></h3>
+            <p><%= t("navigation.about.description") %></p>
+            <%= link_to t("navigation.about.find_more"), nil, class: "btn btn-mini btn-primary" %>
           </div>
           <div class="span4"> 
-            <!--Colour Switch for demo - @todo: remove in production-->
-            <div class="colour-switcher">
-              <h3>Theme Colours</h3>
-              <a href="#green" class="green active _tooltip" data-placement="bottom" data-original-title="Green (Default)">Green</a> <a href="#red" class="red _tooltip" data-placement="bottom" data-original-title="Red">Red</a> <a href="#blue" class="blue _tooltip" data-placement="bottom" data-original-title="Blue">Blue</a>
-              <p>Cookies are NOT enabled so colour selection is not persistent.</p>
-            </div>
+            <!--@todo: replace with company contact details-->
+            <h3><%= t("navigation.about.contact_us") %></h3>
+            <address>
+            <p><abbr title="Phone"><i class="icon-phone"></i></abbr> 019999 9999999</p>
+            <p><abbr title="Email"><i class="icon-envelope"></i></abbr> contato@alik.com.br</p>
+            <!-- <p><abbr title="Address"><i class="icon-home"></i></abbr> Sunshine House, Sunville. SUN12 8LU.</p> -->
+            </address>
           </div>
         </div>
       </div>
