--- a/app/views/shared/_static_banner.html.erb
+++ b/app/views/shared/_static_banner.html.erb
@@ -13,3 +13,20 @@
     </section> -->
   </div>
 </div>
+
+<div id="content-below" class="wrapper">
+  <div class="container">
+    <div class="row-fluid">
+      <div class="upsell"> 
+        <small class="muted">99.9% Uptime <span class="spacer">//</span>
+         Free upgrade assistence <span class="spacer">//</span> 
+         24/7 Support 
+          <span class="spacer">//</span> 
+          Plans from $19.99/month <span class="spacer">//</span> 
+        </small> 
+        <a href="pricing.htm" class="btn btn-primary">Start your Free Trial Today! <i class="icon-arrow-right"></i></a> 
+        <a href="pricing.htm" class="btn btn-primary">Start your Free Trial Today! <i class="icon-arrow-right"></i></a> 
+      </div>
+    </div>
+  </div>
+</div>
