--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,39 +1,58 @@
-<fieldset>
-<%= simple_form_for(@question) do |f| %>
+<div class="row-fluid">
+	<h2 class="title-divider"><span>Últimas <span class="de-em">Perguntas</span></span></h2>
+</div>
+<div class="row"> 
+	<div class="span9">
+		<%= simple_form_for @question do |f| %>
+			<h3 class="title-divider"><span>Nova Pergunta</span> </h3>
+			<%= f.input :title, 					input_html: { class: "input-block-level" }, label: false, placeholder: "TITULO" %>
+			<%= f.input :requester_name, 	input_html: { class: "input-block-level" }, label: false %>
+			<%= f.input :requester_email, input_html: { class: "input-block-level" }, label: false %>
+			<%= f.input :requester_phone, input_html: { class: "input-block-level" }, label: false %>
 
-	<%= f.input :title %>
-	<%= f.input :requester_name %>
-	<div class="row">
-		<div class="seven columns">
-			<%= f.input :requester_email %>
-		</div>
-		<div class="five columns">
-			<%= f.input :requester_phone %>
-		</div>
+			<h5>ESTADO</h5>
+			<%= f.association :state, label: false %>
+			<h5>CIDADE</h5>
+			<%= f.association :city,  label: false %>
+ 
+			<%= f.input :description, :as => :text, input_html: { class: "input-block-level", rows: "10" }, label: false %>
+
+			<div class="form-actions">
+				<%= f.button :submit,  :class => "secondary button" %> ou
+				<%= link_to "Cancelar", root_path %>
+			</div>
+		<% end %>
 	</div>
 
-	<div class="row">
-		<div class="seven columns">
-			<%= f.input :state_id do %>
-			<%= f.collection_select :state_id, State.all, :id, :name, :selected => @question.city.present? ? @question.city.state_id : @question.state_id, :include_blank => 'Selecione um estado' %>
-			<% end %>
-			
-		
-		</div>
-		<div class="five columns">
-			<%= f.input :city_id do %>
-			<%= f.collection_select :city_id, cities(@question.city.present? ? @question.city.state_id : @question.state_id), :id, :name, :selected => @question.city_id, :include_blank => @question.city.present? || @question.state_id.present? ? 'Selecione a cidade' : 'Selecione um estado' %>
-			<% end %>
-		</div>
-	</div>
+	<!--Sidebar-->
+	<div class="span3 sidebar sidebar-right">
+    <div class="inner">
+      <div class="block">
+        <div class="input-append">
+          <input class="span2" id="appendedInputButton" type="text" placeholder="Search">
+          <button class="btn" type="button">Go!</button>
+        </div>
+      </div>
+      <div class="block">
+        <h4 class="title-divider"><span>Tags</span></h4>
+        <div class="tag-cloud"> <span><a href="#">culture</a> (97)</span> <span><a href="#">general</a> (77)</span> <span><a href="#">coding</a> (75)</span> <span><a href="#">design</a> (56)</span> <span><a href="#">weather</a> (65)</span> <span><a href="#">jobs</a> (70)</span> <span><a href="#">health</a> (54)</span> </div>
+      </div>
+      <div class="block">
+        <h4 class="title-divider"><span>Archive</span></h4>
+        <ul class="big-list tags">
+          <li><a href="#">January 2013</a> (19)</li>
+          <li><a href="#">December 2012</a> (0)</li>
+          <li><a href="#">November 2012</a> (39)</li>
+          <li><a href="#">October 2012</a> (20)</li>
+          <li><a href="#">September 2012</a> (56)</li>
+          <li><a href="#">August 2012</a> (49)</li>
+          <li><a href="#">July 2012</a> (90)</li>
+        </ul>
+      </div>
+      <div class="block"> <a href="#" class="btn btn-warning"><i class="icon-rss"></i> Subscribe via RSS feed</a> </div>
+    </div>
+  </div>
+</div>
 
-	<%= f.input :description, :as => :text, input_html: {:rows => "10"} %>
-
-	<div class="form-actions">
-		<%= f.button :submit,  :class => "secondary button" %> ou
-		<%= link_to "Cancelar", root_path %>
-	</div>
-	<% end %>
-</fieldset>
 
 
