--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -3,71 +3,37 @@
 </div>
 <div class="row"> 
   <!--Blog Roll Content-->
-  <div class="span9 blog-roll blog-list"> 
-    
-  <% 10.times do |time| %>
+  <div class="span9 blog-roll blog-list">
+  <% @questions.each do |question| %>
     <!-- Blog post -->
     <div class="media row-fluid">
       <div class="span1 hidden-phone"> 
         <!-- Date desktop -->
-        <div class="date-wrapper"> <span class="date-m">Jan</span> <span class="date-d">20</span> </div>
-        <!-- Meta details desktop -->
-        <p class="meta muted"> <i class="icon-user"></i> <a href="#">Alex</a> </p>
+        <div class="date-wrapper"> 
+          <span class="date-m"><%= question.month %></span> 
+          <span class="date-d"><%= question.day %></span> 
+        </div>
       </div>
       <div class="span11">
         <div class="media-body">
-          <div class="tags"><a href="#" class="tag">coding</a> / <a href="#" class="type">event</a></div>
-          <h4 class="title media-heading"><a href="blog-post.htm">a nec in sed hac ultrices cursus</a></h4>
-          
-          <!-- Meta details mobile -->
-          <ul class="inline meta muted visible-phone">
-            <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Sun 20th Jan 2013</li>
-            <li><i class="icon-user"></i> <a href="#">Alex</a></li>
-          </ul>
-          <%= link_to image_tag("blog/ape.jpg"), nil, class: "media-object", alt: "Picture of frog by Ben Fredericson" %>
-          <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
-          <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
           <ul class="inline links">
-            <li><a href="blog-post.htm" class="btn btn-mini"><i class="icon-circle-arrow-right"></i> Read more</a></li>
-            <li><a href="blog-post.htm#comments" class="btn btn-mini"><i class="icon-comment"></i> 50 Comments</a></li>
+            <li><p class="meta muted"> <i class="icon-user"></i> <%= question.name %></p></li>
+            <li><p class="meta muted"> <i class="icon-home"></i> <%= question.addresss %></p></li>
+            <li><p class="meta muted"> <i class="icon-calendar"></i> <%= question.created_at_short %></p></li>
+          </ul>
+          <h4 class="title media-heading"><%= question.linked_title %></h4>
+          <%= question.description_truncate %>
+          <ul class="inline links">
+            <li><%= question.linked_read_more %></li>
+            <li><%= question.linked_answers_count %></li>
           </ul>
         </div>
       </div>
     </div>
   <% end %>
-    
-  <small>Blog photos by <a href="http://www.flickr.com/photos/xjrlokix/">Ben Fredericson</a></small>
-    <div class="pagination pagination-centered">
-      <button type="button" class="btn btn-block" data-loading-text="Loading...">Load More</button>
+    <div class="flickr_pagination">
+      <%= will_paginate @questions %>
     </div>
   </div>
-  
-  <!--Sidebar-->
-  <div class="span3 sidebar sidebar-right">
-    <div class="inner">
-      <div class="block">
-        <div class="input-append">
-          <input class="span2" id="appendedInputButton" type="text" placeholder="Search">
-          <button class="btn" type="button">Go!</button>
-        </div>
-      </div>
-      <div class="block">
-        <h4 class="title-divider"><span>Tags</span></h4>
-        <div class="tag-cloud"> <span><a href="#">culture</a> (97)</span> <span><a href="#">general</a> (77)</span> <span><a href="#">coding</a> (75)</span> <span><a href="#">design</a> (56)</span> <span><a href="#">weather</a> (65)</span> <span><a href="#">jobs</a> (70)</span> <span><a href="#">health</a> (54)</span> </div>
-      </div>
-      <div class="block">
-        <h4 class="title-divider"><span>Archive</span></h4>
-        <ul class="big-list tags">
-          <li><a href="#">January 2013</a> (19)</li>
-          <li><a href="#">December 2012</a> (0)</li>
-          <li><a href="#">November 2012</a> (39)</li>
-          <li><a href="#">October 2012</a> (20)</li>
-          <li><a href="#">September 2012</a> (56)</li>
-          <li><a href="#">August 2012</a> (49)</li>
-          <li><a href="#">July 2012</a> (90)</li>
-        </ul>
-      </div>
-      <div class="block"> <a href="#" class="btn btn-warning"><i class="icon-rss"></i> Subscribe via RSS feed</a> </div>
-    </div>
-  </div>
+  <%= render "sidebar" %>
 </div>
